--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAME HERE"
-date: "`r Sys.Date()`"
+title: "An introduction to conditional inference trees in R"
+author: "Martin Schweinberger"
+date: "Jan. 19, 2023"
 site: bookdown::bookdown_site
 ---
 
-# Down the rabbit-hole
+# Introduction
 
